fixing bug within the hour

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 
 body
 {
+	/*background: url("https://i.imgur.com/lO2Hftg.png");*/
     background-color: #021f31;
     color: lightskyblue;
     text-align: center;
