added new images and more faq questions, fixed the image carousel and added controls to the video

--- a/styles.css
+++ b/styles.css
@@ -265,6 +265,16 @@ div.gallery img
     clear: both;
 }
 
+@media (min-width: 768px) {
+    .carousel-multi-item-2 .col-md-3 {
+    float: left;
+    width: 25%;
+    max-width: 100%; } }
+    
+    .carousel-multi-item-2 .card img {
+    border-radius: 2px; }
+
+
 /*download buttons*/
 a.assetBtnDownload 
 {
@@ -413,5 +423,7 @@ a.binBtnDownloadSm:active
 	top:1px;
 }
 
-        
-
+.card {
+    border: 3;
+    background-color: lightskyblue;
+}
