fix unicode on non-windows (use more common unicode), check if windows and if so replace with better looking symbol

--- a/styles.css
+++ b/styles.css
@@ -432,7 +432,7 @@ a.bigDownloadHoverBtn {
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
-	font-family:BankGothic;
+	font-family:Arial;
 	font-size:35px;
 	font-weight:bold;
 	padding:10px 24px;
