--- a/styles.max.css
+++ b/styles.max.css
@@ -4,6 +4,16 @@
     src: url("./fonts/BankGothicBold.ttf");
 }
 
+@font-face 
+{
+    font-family: 'IBM Plex Mono';
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+    src: local('IBM Plex Mono Medium'), local('IBMPlexMono-Medium'), url(https://fonts.gstatic.com/s/ibmplexmono/v5/-F6qfjptAgt5VM-kVkqdyU8n3twJwlBFgg.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 body
 {
 	/*background: url("https://i.imgur.com/lO2Hftg.png");*/
@@ -149,7 +159,8 @@ a:active
 #navbar 
 {
     background-color: #555555;
-    font-family: "Rockwell";
+    font-family: "Rockwell", "IBM Plex Mono";
+    letter-spacing: -1px;
     font-size: 25px;
     color: white;
     text-align: left;
