--- a/styles.max.css
+++ b/styles.max.css
@@ -2,6 +2,7 @@
 {
     font-family: "BankGothic";
     src: url("./fonts/BankGothicBold.ttf");
+    font-display: swap;
 }
 
 @font-face 
@@ -12,6 +13,7 @@
     font-display: swap;
     src: local('IBM Plex Mono Medium'), local('IBMPlexMono-Medium'), url(https://fonts.gstatic.com/s/ibmplexmono/v5/-F6qfjptAgt5VM-kVkqdyU8n3twJwlBFgg.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+    font-display: swap;
 }
 
 body
