--- a/styles.max.css
+++ b/styles.max.css
@@ -457,3 +457,130 @@ a.bigDownloadHoverBtn:active {
     padding:10px 2px 10px 2px;
     margin:10px 2px 10px 2px;
 }
+
+
+
+/* Modal Stuff */
+
+  /* The Modal (background) */
+  .modal 
+  {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 25px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: black;
+  }
+  
+  /* Modal Content */
+  .modal-content 
+  {
+    position: relative;
+    background-color: black;
+    margin: auto;
+    padding: 0;
+    width: 70%;
+  }
+
+  .modal-content img
+  {
+      max-width: 90%;
+      max-height: 90%;
+  }
+  
+  /* The Close Button */
+  .close 
+  {
+    color: white;
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    font-size: 35px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus 
+  {
+    color: #999;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  /* Hide the slides by default */
+  .mySlides 
+  {
+    display: none;
+  }
+  
+  /* Next & previous buttons */
+  .modal-prev,
+  .modal-next
+  {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -50px;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .modal-next 
+  {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .modal-prev:hover,
+  .modal-next:hover 
+  {
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+  
+  /* Number text (1/3 etc) */
+  .numbertext 
+  {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  
+  /* Caption text */
+  .caption-container 
+  {
+    text-align: center;
+    background-color: black;
+    padding: 2px 16px;
+    color: white;
+  }
+  
+  img.card
+  {
+    transition: 0.4s;
+  }
+  
+  .card
+  {
+    box-shadow: 0 4px 8px 0 rgba(10, 157, 255, 0.226), 0 6px 20px 0 rgba(10, 157, 255, 0.226);
+  }
+
+  .card:hover
+  {
+    box-shadow: 0 4px 8px 0 rgba(163, 237, 255, 0.603), 0 6px 20px 0 rgba(163, 237, 255, 0.603);
+  }
