--- a/styles.max.css
+++ b/styles.max.css
@@ -496,7 +496,7 @@ a.bigDownloadHoverBtn:active {
   /* The Close Button */
   .close 
   {
-    color: white;
+    color: #999;
     position: absolute;
     top: 10px;
     right: 25px;
@@ -507,7 +507,7 @@ a.bigDownloadHoverBtn:active {
   .close:hover,
   .close:focus 
   {
-    color: #999;
+    color: white;
     text-decoration: none;
     cursor: pointer;
   }
@@ -528,7 +528,7 @@ a.bigDownloadHoverBtn:active {
     width: auto;
     padding: 16px;
     margin-top: -50px;
-    color: white;
+    color: #999;
     font-weight: bold;
     font-size: 20px;
     transition: 0.6s ease;
@@ -548,7 +548,8 @@ a.bigDownloadHoverBtn:active {
   .modal-prev:hover,
   .modal-next:hover 
   {
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(19, 129, 197, 0.7);
+    box-shadow: 0px 2px 20px 0px rgba(163, 237, 255, 0.603);
   }
   
   /* Number text (1/3 etc) */
@@ -583,4 +584,5 @@ a.bigDownloadHoverBtn:active {
   .card:hover
   {
     box-shadow: 0 4px 8px 0 rgba(163, 237, 255, 0.603), 0 6px 20px 0 rgba(163, 237, 255, 0.603);
+    cursor: pointer;
   }
