Fixing some navbar resizing issues and shuffling some elements for load optimization.

--- a/styles.max.css
+++ b/styles.max.css
@@ -146,6 +146,12 @@ a:active
     visibility: visible;
 }
 
+.logo img
+{
+    height: 100%;
+    width: auto;
+}
+
 #video-carousel h4
 {
     color: white; 
