--- a/styles.max.css
+++ b/styles.max.css
@@ -592,3 +592,9 @@ a.bigDownloadHoverBtn:active {
     box-shadow: 0 4px 8px 0 rgba(163, 237, 255, 0.603), 0 6px 20px 0 rgba(163, 237, 255, 0.603);
     cursor: pointer;
   }
+
+  #clipNotify
+  {
+    display: none;
+    visibility: hidden;
+  }
