hide instructions on download page by default to make things a bit cleaner/less distracting.   About page brief video is also getting compressed more.

--- a/styles.max.css
+++ b/styles.max.css
@@ -637,6 +637,16 @@ a.bigDownloadHoverBtn:active {
     cursor: pointer;
    }
 
+   #instructionBody
+   {
+    display: none;
+   }
+
+   #installPrompt
+   {
+    display: none;
+   }
+
    #widgetbotdiv
    {
     display: none;
